--- a/notebooks/task_1_cartpole_lqr_balance_data_gen.ipynb
+++ b/notebooks/task_1_cartpole_lqr_balance_data_gen.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "aa2ebb57",
    "metadata": {},
    "outputs": [],
@@ -20,8 +20,7 @@
     "from stable_baselines3 import PPO\n",
     "import numpy as np\n",
     "import os\n",
-    "from pathlib import Path\n",
-    "from tqdm import trange\n"
+    "from pathlib import Path\n"
    ]
   },
   {
@@ -95,7 +94,7 @@
     "    env_gui,\n",
     "    video_folder=\"videos\",\n",
     "    episode_trigger=lambda ep: True,\n",
-    "    name_prefix=\"balance_demo\"\n",
+    "    name_prefix=\"balance_demo_data_gen\"\n",
     ")"
    ]
   },
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "88309937",
    "metadata": {},
    "outputs": [
@@ -456,7 +455,7 @@
     "    n_episodes=10,\n",
     "    video_dir=\"videos\",\n",
     "    data_dir=\"data\",\n",
-    "    filename=\"ppo_balance_clean_30s\"\n",
+    "    filename=\"test_ppo_balance_clean_30s\"\n",
     ")"
    ]
   },
