Added some tweaks

--- a/notebooks/task_7_ppo_trainings.ipynb
+++ b/notebooks/task_7_ppo_trainings.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "36b9f767",
    "metadata": {},
    "outputs": [
@@ -40,13 +40,6 @@
      "output_type": "stream",
      "text": [
       "Project root: /home/acepeax/Desktop/Studies/MVA/Robotics/Project\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pybullet build time: Dec  4 2025 20:11:42\n"
      ]
     }
    ],
@@ -73,7 +66,9 @@
     "\n",
     "print('Project root:', PROJECT_ROOT)\n",
     "\n",
-    "DATASET_SIM_SUBSTEPS = 6"
+    "DATASET_SIM_SUBSTEPS = 6\n",
+    "DATASET_DURATION_S = 30.0\n",
+    "DATASET_VIDEO_DIR = Path('videos/task7_dataset')"
    ]
   },
   {
@@ -226,7 +221,43 @@
    "id": "3dbd70fe",
    "metadata": {},
    "source": [
-    "## Testing"
+    "train_env.close()\n",
+    "\n",
+    "EVAL_RECORD_VIDEO = False\n",
+    "EVAL_VIDEO_DIR = Path('videos/task7_eval_rollouts')\n",
+    "\n",
+    "def rollout_episode(env, model, max_steps=MAX_STEPS, deterministic=True):\n",
+    "    obs, _ = env.reset()\n",
+    "    rewards = []\n",
+    "    infos = []\n",
+    "    for _ in range(max_steps):\n",
+    "        action, _ = model.predict(obs, deterministic=deterministic)\n",
+    "        obs, reward, terminated, truncated, info = env.step(action)\n",
+    "        rewards.append(reward)\n",
+    "        infos.append(info)\n",
+    "        if terminated or truncated:\n",
+    "            break\n",
+    "    return np.array(rewards), infos\n",
+    "\n",
+    "if EVAL_RECORD_VIDEO:\n",
+    "    EVAL_VIDEO_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "    base_eval_env = Task7PendulumEnv(\n",
+    "        max_steps=MAX_STEPS,\n",
+    "        should_balance=SHOULD_BALANCE,\n",
+    "        gui=False,\n",
+    "        sim_substeps=SIM_SUBSTEPS,\n",
+    "        render_mode='rgb_array',\n",
+    "    )\n",
+    "    eval_env = RecordVideo(\n",
+    "        base_eval_env,\n",
+    "        video_folder=str(EVAL_VIDEO_DIR),\n",
+    "        name_prefix='task7_eval',\n",
+    "        episode_trigger=lambda ep: True,\n",
+    "    )\n",
+    "else:\n",
+    "    eval_env = Task7PendulumEnv(\n",
+    "        max_steps=MAX_STEPS, should_balance=SHOULD_BALANCE, gui=True, sim_substeps=SIM_SUBSTEPS\n",
+    "    )"
    ]
   },
   {
@@ -303,13 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c63a97ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_DURATION_S = 30.0\n",
-    "DATASET_VIDEO_DIR = Path('videos/task7_dataset')\n",
     "DATASET_VIDEO_DIR.mkdir(parents=True, exist_ok=True)\n",
     "BASE_BULLET_DT = 1.0 / 240.0\n",
     "\n",
@@ -526,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "6c4d2dfe",
    "metadata": {},
    "outputs": [],
@@ -551,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9a61c5b4",
    "metadata": {},
    "outputs": [
@@ -593,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a6f17fc5",
    "metadata": {},
    "outputs": [
@@ -624,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7d8fa967",
    "metadata": {},
    "outputs": [
@@ -656,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "a0c32acf",
    "metadata": {},
    "outputs": [
@@ -691,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "71284716",
    "metadata": {},
    "outputs": [
@@ -729,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "cee67e20",
    "metadata": {},
    "outputs": [
@@ -789,35 +818,7 @@
    "execution_count": null,
    "id": "7dc0d796",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_10936/4122364212.py:5: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-      "  u = float(-(self.K @ obs.reshape(-1, 1)))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LQR episode length: 600\n",
-      "LQR total reward: 346.226761989406\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rewards_lqr, infos_lqr = rollout_episode(eval_env_lqr, lqr_policy)\n",
     "print('LQR episode length:', len(rewards_lqr))\n",
@@ -846,9 +847,9 @@
       "numActiveThreads = 0\n",
       "btShutDownExampleBrowser stopping threads\n",
       "Thread with taskId 0 exiting\n",
-      "Thread TERMINATED\n",
       "destroy semaphore\n",
       "semaphore destroyed\n",
+      "Thread TERMINATED\n",
       "destroy main semaphore\n",
       "main semaphore destroyed\n"
      ]
