--- a/notebooks/task_7_ppo_trainings.ipynb
+++ b/notebooks/task_7_ppo_trainings.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "36b9f767",
    "metadata": {},
    "outputs": [
@@ -40,6 +40,13 @@
      "output_type": "stream",
      "text": [
       "Project root: /home/acepeax/Desktop/Studies/MVA/Robotics/Project\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Dec  4 2025 20:11:42\n"
      ]
     }
    ],
@@ -146,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "84dd7427",
    "metadata": {},
    "outputs": [],
@@ -417,132 +424,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6c4ece55",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/acepeax/Desktop/Studies/MVA/Robotics/Project/.venv/lib/python3.12/site-packages/gymnasium/wrappers/rendering.py:293: UserWarning: \u001b[33mWARN: Overwriting existing videos at /home/acepeax/Desktop/Studies/MVA/Robotics/Project/videos/task7_dataset folder (try specifying a different `video_folder` for the `RecordVideo` wrapper if this is not desired)\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recording 7 episodes of 30.0s (~1200 env steps)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 1199/1200 [00:02<00:00, 549.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recorded episode 1/7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 1199/1200 [00:02<00:00, 539.69it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recorded episode 2/7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 1199/1200 [00:02<00:00, 482.32it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recorded episode 3/7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 1199/1200 [00:02<00:00, 446.95it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recorded episode 4/7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 1199/1200 [00:02<00:00, 459.12it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recorded episode 5/7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 1199/1200 [00:02<00:00, 448.81it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recorded episode 6/7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 1199/1200 [00:02<00:00, 458.42it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recorded episode 7/7\n",
-      "Dataset saved to data/task7_ppo_balance_rollouts.npz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_path = record_task7_dataset(\n",
     "    model,\n",
@@ -557,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6c4d2dfe",
    "metadata": {},
    "outputs": [],
@@ -582,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9a61c5b4",
    "metadata": {},
    "outputs": [
@@ -624,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a6f17fc5",
    "metadata": {},
    "outputs": [
@@ -655,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7d8fa967",
    "metadata": {},
    "outputs": [
@@ -687,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a0c32acf",
    "metadata": {},
    "outputs": [
@@ -722,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "71284716",
    "metadata": {},
    "outputs": [
@@ -760,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "cee67e20",
    "metadata": {},
    "outputs": [
@@ -803,24 +688,51 @@
    ],
    "source": [
     "class Task7LQRPolicy:\n",
-    "    def __init__(self, K):\n",
+    "    def __init__(self, K, use_continuous=False):\n",
     "        self.K = K\n",
+    "        self.use_continuous = use_continuous\n",
+    "\n",
     "    def predict(self, obs, deterministic=True):\n",
     "        u = float(-(self.K @ obs.reshape(-1, 1)))\n",
+    "        if self.use_continuous:\n",
+    "            return np.array([[np.clip(u, -1.0, 1.0)]], dtype=np.float32), None\n",
     "        clipped = np.clip(u, ACTION_VALUES.min(), ACTION_VALUES.max())\n",
     "        idx = int(np.argmin(np.abs(ACTION_VALUES - clipped)))\n",
     "        return idx, None\n",
     "\n",
-    "lqr_policy = Task7LQRPolicy(K_lqr)\n",
-    "eval_env_lqr = Task7PendulumEnv(gui=True, should_balance=SHOULD_BALANCE, sim_substeps=SIM_SUBSTEPS)\n"
+    "lqr_policy = Task7LQRPolicy(K_lqr, use_continuous=False)\n",
+    "\n",
+    "eval_env_lqr = Task7PendulumEnv(\n",
+    "    gui=True,\n",
+    "    should_balance=SHOULD_BALANCE,\n",
+    "    sim_substeps=SIM_SUBSTEPS,\n",
+    "    continuous_actions=False,\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7dc0d796",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_43031/1891531227.py:7: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  u = float(-(self.K @ obs.reshape(-1, 1)))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LQR episode length: 600\n",
+      "LQR total reward: 359.7300310646293\n"
+     ]
+    }
+   ],
    "source": [
     "rewards_lqr, infos_lqr = rollout_episode(eval_env_lqr, lqr_policy)\n",
     "print('LQR episode length:', len(rewards_lqr))\n",
@@ -829,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a282f04b",
    "metadata": {},
    "outputs": [
