--- a/notebooks/task_7_ppo_trainings.ipynb
+++ b/notebooks/task_7_ppo_trainings.ipynb
@@ -96,6 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "argv[0]=--minLoggingLevel=3\n",
       "Observation space: Box(-inf, inf, (14,), float32)\n",
       "Action space: Discrete(3)\n"
      ]
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6c4d2dfe",
    "metadata": {},
    "outputs": [],
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9a61c5b4",
    "metadata": {},
    "outputs": [
@@ -509,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a6f17fc5",
    "metadata": {},
    "outputs": [
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7d8fa967",
    "metadata": {},
    "outputs": [
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a0c32acf",
    "metadata": {},
    "outputs": [
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "71284716",
    "metadata": {},
    "outputs": [
@@ -633,6 +634,27 @@
     "K_lqr, S_lqr, eigvals_lqr = control.dlqr(A_lin, B_lin, Q, R)\n",
     "print('K shape:', K_lqr.shape)\n",
     "print('Eigenvalues:', eigvals_lqr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "53d6069d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K_lqr= [[ 6.78476634e+00  5.28904201e-01 -1.46821116e+03  5.47085021e+03\n",
+      "   1.22385258e+03  5.33145726e+00 -2.37202244e+01 -4.88098112e+00\n",
+      "   1.47333821e+03 -5.47849355e+03 -1.22381746e+03  9.59106566e-01\n",
+      "   2.93051478e-01 -2.42449741e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"K_lqr=\",K_lqr)"
    ]
   },
   {
