--- a/notebooks/task_7_ppo_trainings.ipynb
+++ b/notebooks/task_7_ppo_trainings.ipynb
@@ -226,22 +226,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3dbd70fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "argv[0]=--minLoggingLevel=3\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "argc=3\n",
+      "argv[0] = --unused\n",
+      "argv[1] = --minLoggingLevel=3\n",
+      "argv[2] = --start_demo_name=Physics Server\n",
+      "ExampleBrowserThreadFunc started\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "Creating context\n",
+      "Created GL 3.3 context\n",
+      "Direct GLX rendering context obtained\n",
+      "Making context current\n",
+      "GL_VENDOR=Intel\n",
+      "GL_RENDERER=Mesa Intel(R) Iris(R) Xe Graphics (RPL-U)\n",
+      "GL_VERSION=4.6 (Core Profile) Mesa 25.0.7-0ubuntu0.24.04.1\n",
+      "GL_SHADING_LANGUAGE_VERSION=4.60\n",
+      "pthread_getconcurrency()=0\n",
+      "Version = 4.6 (Core Profile) Mesa 25.0.7-0ubuntu0.24.04.1\n",
+      "Vendor = Intel\n",
+      "Renderer = Mesa Intel(R) Iris(R) Xe Graphics (RPL-U)\n",
+      "b3Printf: Selected demo: Physics Server\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "MotionThreadFunc thread started\n",
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n"
+     ]
+    }
+   ],
    "source": [
     "train_env.close()\n",
     "\n",
     "EVAL_RECORD_VIDEO = False\n",
     "EVAL_VIDEO_DIR = Path('videos/task7_eval_rollouts')\n",
     "\n",
+    "\n",
     "def rollout_episode(env, model, max_steps=MAX_STEPS, deterministic=True):\n",
     "    obs, _ = env.reset()\n",
     "    rewards = []\n",
     "    infos = []\n",
-    "    for _ in range(max_steps):\n",
+    "    for step in range(max_steps):\n",
     "        action, _ = model.predict(obs, deterministic=deterministic)\n",
+    "        if step in [0,40,53,60,75,85]:\n",
+    "                env.capture_snapshot(file_path=\"videos/balance_lqr/snapshot_\"+str(step)+\".png\")\n",
     "        obs, reward, terminated, truncated, info = env.step(action)\n",
     "        rewards.append(reward)\n",
     "        infos.append(info)\n",
@@ -272,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "65319fc5",
    "metadata": {},
    "outputs": [
@@ -280,12 +322,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "numActiveThreads = 0\n",
+      "stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "Thread TERMINATED\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n",
+      "finished\n",
+      "numActiveThreads = 0\n",
+      "btShutDownExampleBrowser stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "Thread TERMINATED\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n",
+      "argv[0]=--minLoggingLevel=3\n",
       "startThreads creating 1 threads.\n",
       "starting thread 0\n",
       "started thread 0 \n",
-      "argc=2\n",
+      "argc=3\n",
       "argv[0] = --unused\n",
-      "argv[1] = --start_demo_name=Physics Server\n",
+      "argv[1] = --minLoggingLevel=3\n",
+      "argv[2] = --start_demo_name=Physics Server\n",
       "ExampleBrowserThreadFunc started\n",
       "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
       "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
@@ -323,10 +384,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "782f6673",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode length: 1000\n",
+      "Total reward: 910.9381033391301\n",
+      "Final info: {'failure': False, 'success': True, 'state': Task7Observation(vector=array([-0.04417268, -0.9707886 ,  0.50573903, -0.03326402,  0.57502156,\n",
+      "        0.13477112, -0.26017508, -0.00439149,  0.00472049, -0.03660967,\n",
+      "       -0.00503188,  0.22653417, -0.1843962 , -0.02471591], dtype=float32), pendulum_angle=-0.04417267929115898, pendulum_velocity=-0.970788573528207, end_effector_position=array([ 0.00472049, -0.03660967, -0.00503188])), 'y_target': -0.45}\n"
+     ]
+    }
+   ],
    "source": [
     "rewards, infos = rollout_episode(eval_env, model)\n",
     "print('Episode length:', len(rewards))\n",
@@ -443,10 +516,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "6c4d2dfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numActiveThreads = 0\n",
+      "stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "Thread TERMINATED\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n",
+      "finished\n",
+      "numActiveThreads = 0\n",
+      "btShutDownExampleBrowser stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "Thread TERMINATED\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    train_env.close()\n",
@@ -468,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "9a61c5b4",
    "metadata": {},
    "outputs": [
@@ -510,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "a6f17fc5",
    "metadata": {},
    "outputs": [
@@ -541,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7d8fa967",
    "metadata": {},
    "outputs": [
@@ -573,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "a0c32acf",
    "metadata": {},
    "outputs": [
@@ -608,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "71284716",
    "metadata": {},
    "outputs": [
@@ -638,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "53d6069d",
    "metadata": {},
    "outputs": [
@@ -667,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "cee67e20",
    "metadata": {},
    "outputs": [
@@ -675,12 +772,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "argv[0]=--minLoggingLevel=3\n",
       "startThreads creating 1 threads.\n",
       "starting thread 0\n",
       "started thread 0 \n",
-      "argc=2\n",
+      "argc=3\n",
       "argv[0] = --unused\n",
-      "argv[1] = --start_demo_name=Physics Server\n",
+      "argv[1] = --minLoggingLevel=3\n",
+      "argv[2] = --start_demo_name=Physics Server\n",
       "ExampleBrowserThreadFunc started\n",
       "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
       "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
@@ -734,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "7dc0d796",
    "metadata": {},
    "outputs": [
@@ -742,7 +841,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_43031/1891531227.py:7: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/tmp/ipykernel_24350/1891531227.py:7: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  u = float(-(self.K @ obs.reshape(-1, 1)))\n"
      ]
     },
@@ -751,7 +850,7 @@
      "output_type": "stream",
      "text": [
       "LQR episode length: 600\n",
-      "LQR total reward: 359.7300310646293\n"
+      "LQR total reward: 341.7170975077234\n"
      ]
     }
    ],
