--- a/notebooks/task_8_data_collection.ipynb
+++ b/notebooks/task_8_data_collection.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e5b4966b",
    "metadata": {},
    "outputs": [
@@ -214,6 +214,17 @@
       "Observation space: Box(-inf, inf, (14,), float32)\n",
       "Action space: Discrete(3)\n",
       "Arrow keys control the end-effector target. R resets, ESC quits.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
